# PlugFile

./: .env.example  .gitignore  MONOREPO.md  PLAN.md  README.md  phase1a_validation_report.md  phase1b_validation_report.md  phase1c_validation_report.md  pyproject.toml  render.yaml  rules_snapshots.json
.github/workflows/: agent-builder.yml  agent-verifier.yml  ci.yml  rules-watch.yml
apps/familyops/: README.md  pyproject.toml
apps/familyops/src/familyops/: __init__.py  brief.py  dedup.py  delivery.py  graph.py  ingest.py
apps/familyops/tests/: test_brief.py  test_dedup.py  test_delivery.py  test_e2e_moat.py  test_graph.py  test_ingest.py
apps/familyops/tests/fixtures/: forwarded_school_email.json
branding/: logo_variants.html
docs/: SUPABASE_SETUP.md  positioning-and-roadmap.md  w3a-scope.md
docs/presentations/: client_pitch_deck.md  client_pitch_deck_marp.md  sales_recruit_playbook.md  sales_recruit_playbook_marp.md
landing/: README.md  _headers  _redirects  for-engineers.html  index.html  vercel.json
pytest-cache-files-qhpa4vys/v/cache/: lastfailed  nodeids
schemas/: w3.schema.json
scripts/: validate_phase1a.py  validate_phase1b.py  validate_phase1c.py
src/plugfile/: __init__.py  aor.py  aor_import.py  api.py  apinum.py  attachments.py  auth.py  district_office.py  formatting.py  gau_check.py  gau_parser.py  handoff.py  json_schema_export.py  lookups.py  lookups_rrc.py  narrative.py  pdf_export.py  plug_plan.py  portal_format.py  prefill_w3a.py  prompt_scaffold.py  rules_watch.py  tac_3_14.py  w3a_schema.py
src/plugfile/static/: app.js  auth.js  index.html  manifest.json  rules.html  rules.js  saves.js  style.css  sw.js  w3a.html  w3a.js
src/wellplug/: __init__.py  cement_volume.py  geometry.py  json_schema_export.py  lookups.py  lookups_rrc.py  narrative.py  prefill.py  prompt_scaffold.py  w3_schema.py
supabase/: config.toml
supabase/migrations/: 0001_filings.sql  0002_filing_shares.sql
tests/: conftest.py  rrc_batch_check.py  test_aor.py  test_aor_import.py  test_api_auth_gate.py  test_api_health.py  test_apinum.py  test_attachments.py  test_auth.py  test_cement_volume.py  test_district_office.py  test_formatting.py  test_gau_check.py  test_gau_parser.py  test_handoff.py  test_llm_narrative.py  test_lookups.py  test_lookups_rrc.py  test_narrative_drafter.py  test_narrative_extraction.py  test_pdf_export.py  test_plug_plan.py  test_portal_format.py  test_prefill.py  test_rrc_live.py  test_rules_watch.py  test_tac_3_14.py  test_w3_schema.py  test_w3a_pdf.py  test_w3a_prefill.py
tests/fixtures/: sample_wellbores.py  voice_transcripts.py  well_database.py
tests/fixtures/gau_letters/: __init__.py  letter_texts.py
tests/fixtures/rrc_html/: ewa_wellbore_42-371-30001.html  operator_112233.html  well_42-371-30001.html  well_not_found.html
tools/: Fill-MiningLog.ps1  STRIPE_MANUAL_SETUP.md  agent_full_cycle.sh  apply_coords.py  build_linkedin_mining_xlsx.py  calib_docx.py  check_landing_links.py  cloudflare_secure_baseline.py  create_agent_issues.sh  deploy_landing.py  dry_run_agents.sh  fill_mining_log.py  fix_pages_dns.py  leads_starter.json  linkedin_software_mining_template.xlsx  migrate_to_org.sh  mine_software_adoption.py  plugfile-rename-push.ps1  stripe_setup.py
