[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plugfile"
version = "0.4.0"
description = "Deterministic tooling + LLM prompt scaffold for Texas RRC W-3 well-plugging compliance (TAC §3.14)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kareem" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32",
  "lxml>=5.0",
  "diskcache>=5.6",
  "pypdf>=5.0",
  "reportlab>=4.2",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "anthropic>=0.40",
  "vcrpy>=6.0",
  "responses>=0.25",
  "openpyxl>=3.1",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1",
  "PyJWT>=2.8",
  "cryptography>=42",
]

[project.scripts]
plugfile-rrc   = "plugfile.lookups_rrc:_cli_main"
plugfile-pdf   = "plugfile.pdf_export:_cli_main"
plugfile-gau   = "plugfile.gau_parser:_cli_main"
plugfile-serve = "plugfile.api:_cli_main"
plugfile-rules-watch = "plugfile.rules_watch:_cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/plugfile"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: marks tests that make real HTTP requests to rrc.texas.gov (skipped by default; enable with --live)",
]
